--- a/src/components/style/main.css
+++ b/src/components/style/main.css
@@ -68,7 +68,7 @@ body{
     display: inline-block;
     position:relative;
     box-shadow: 0 1px 10px rgba(0,0,0,0.5);
-    background-color: rgba(42, 193, 188, 0.2);
+    background-color: rgba(0, 0, 0, 0.2); /*rgba(42, 193, 188, 0.2);*/
 }
 
 .main_area .main_item_wrapper img {
