--- a/src/components/style/main.css
+++ b/src/components/style/main.css
@@ -1,74 +1,86 @@
-@media(max-height:1080px) {
-    .App {
-        height: 300%
-    }
+.App{
 
-    /*****************
-          Nav.js
-    *****************/
-    .mobile-container {
-        max-width: 480px;
-        margin: auto;
-        background-color: #555;
-        height: 500px;
-        color: white;
-        border-radius: 10px;
-    }
+}
 
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-    }
+/*****************
+      Home.js
+*****************/
+.wrapper .box_wrapper{
+    height: 100vh;
+}
+.wrapper .box_wrapper:first-child{background-color: rgba(0, 0, 0, 0.1);}
 
-    .topnav #myLinks {
-        display: none;
-    }
-
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-        background-color: #333333;
-        padding: 10px;
-    }
-
-    .topnav a.icon {
-        width: 25px;
-        height: auto;
-        background: #2ac1bc;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding: 10px 20px 7px;
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    .active {
-        background-color: #2ac1bc !important;
-        color: white;
-        font-size: 28px !important;
-        font-weight: bolder;
-    }
-
-    .active:hover {
-        color: white;
-        cursor: pointer;
-    }
-
-    /*****************
-         Main.js
-    *****************/
-    .App .window_container{
-        height: 100%;
-    }
+.wrapper .box_wrapper .box_item{
+    display: inline-block;
+    height: 100%;
+    width: 20%;
+}
 
 
+
+/*****************
+      Nav.js
+*****************/
+.mobile-container {
+    max-width: 480px;
+    margin: auto;
+    background-color: #555;
+    height: 500px;
+    color: white;
+    border-radius: 10px;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+}
+
+.topnav #myLinks {
+    display: none;
+}
+
+.topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+    background-color: #333333;
+    padding: 10px;
+}
+
+.topnav a.icon {
+    width: 25px;
+    height: auto;
+    background: #2ac1bc;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px 20px 7px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #2ac1bc !important;
+    color: white;
+    font-size: 28px !important;
+    font-weight: bolder;
+}
+
+.active:hover {
+    color: white;
+    cursor: pointer;
+}
+
+/*****************
+     Home.js
+*****************/
+.App .window_container{
+    height: 100%;
 }
