--- a/src/style/map.css
+++ b/src/style/map.css
@@ -19,7 +19,25 @@
     border-radius: 5px;
 }
 
+/* 지도 확대,축소 컨트롤박스 */
 .custom_zoomcontrol {position:absolute;top:50px;right:10px;width:36px;height:80px;overflow:hidden;z-index:1;background-color:#f5f5f5;}
 .custom_zoomcontrol span {display:block;width:36px;height:40px;text-align:center;cursor:pointer;}
 .custom_zoomcontrol span img {width:15px;height:15px;padding:12px 0;border:none;}
 .custom_zoomcontrol span:first-child{border-bottom:1px solid #bfbfbf;}
+
+/* 검색 영역 */
+.map_search_wrapper {
+    position:absolute;
+    top:20px;
+    left:10px;
+    width: 360px;
+    height: 400px;
+    margin: 0 auto;
+    border-radius: 4px;
+    box-sizing: border-box;
+    z-index: 10;
+    border: 1px solid rgba(0,0,0,.1);
+    background-color: #fff;
+    background-clip: padding-box;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1);
+}
