--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,14 +5,17 @@
       Home.js
 *****************/
 .wrapper{
-    height: 95vh;
+    height: 100vh;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .wrapper .box_wrapper{
-    height: 100%;
+    height: 50vh;
     width: auto;
 }
+.wrapper .box_wrapper .box_result{ width: 50%; height:100%; display: inline-block;}
 
 .wrapper .home_banner{
     background-color: #2ac1bc;
@@ -24,6 +27,7 @@
     display: inline-block;
     width: 20%;
     height: 100%;
+    background-color: #bfbfbf;
     background-repeat : no-repeat;
     background-size: cover;
     background-position: center;
